# ollama-remote

./: Makefile  README.md  pyproject.toml
src/ollama_remote/: cli.py
